Passing token on body response
